<resources>
    <string name="app_name">BuzzFeedQuiz</string>
    <string name="quiz1">What color is your personality?</string>
    <string name="quiz2">What music would I play for you?</string>
    <string name="quiz3">What movie would I play for you?</string>
    <string name="start">START</string>
    <string name="question1">What type of music do you listen to?</string>
    <string name="punk">Punk Rock</string>
    <string name="country">Country</string>
    <string name="pop">Pop</string>
    <string name="rb">R and B</string>
    <string name="hip">Hip Hop</string>
    <string name="edm">EDM</string>
    <string name="question2">What is your chosen aesthetic?</string>
    <string name="hippie">70\'s Hippie</string>
    <string name="emo">Emo</string>
    <string name="grandpa">Grandpa</string>
    <string name="cottage">Cottage Core</string>
    <string name="skater">Skater</string>
    <string name="little">Little Boy</string>
    <string name="question3">How would your friends describe you?</string>
    <string name="ideal">Idealist</string>
    <string name="conspiracy">Conspiracist</string>
    <string name="pessimist">Pessimist</string>
    <string name="nihilist">Nihilist</string>
    <string name="optimist">Optimist</string>
    <string name="realist">Realist</string>
    <string name="question4">What is your favorite day of the week?</string>
    <string name="tues">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="fri">Friday</string>
    <string name="mon">Monday</string>
    <string name="thur">Thursday</string>
    <string name="sat">Saturday and Sunday</string>
    <string name="question5">Pick a place to live:</string>
    <string name="beach">Beach</string>
    <string name="forest">Forest</string>
    <string name="sub">Suburbs</string>
    <string name="mountains">Mountains</string>
    <string name="desert">Desert</string>
    <string name="question6">Pick a leisurely activity:</string>
    <string name="write">Writing</string>
    <string name="read">Reading</string>
    <string name="paint">Painting</string>
    <string name="skate">Skating</string>
    <string name="craft">Crafting</string>
    <string name="gaming">Gaming</string>
    <string name="question7">What is your favorite color?</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="purple">Purple</string>
    <string name="question8">What type of movies do you watch?</string>
    <string name="rom">Rom-Com</string>
    <string name="coming">Coming-of-Age</string>
    <string name="document">Documentaries</string>
    <string name="animated">Animated</string>
    <string name="not">I don\'t watch movies</string>
    <string name="horror">Horror</string>
    <string name="question9">What is your favorite number?</string>
    <string name="hint">1</string>
    <string name="analyze">Analyze</string>
    <string name="indie">Indie</string>
    <string name="metal">Metal</string>
    <string name="question2V2">Do you like to listen to different types of music?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="only">Only if it is good</string>
    <string name="question3V2">What is your chosen form of dancing?</string>
    <string name="sway">Swaying</string>
    <string name="mosh">Moshing</string>
    <string name="toe">Toe-Tapping</string>
    <string name="break_dance">Breakdancing</string>
    <string name="waltz">Waltz</string>
    <string name="aggressive">Aggressive Hand Movement</string>
    <string name="question4V2">Pick a time period:</string>
    <string name="nine70s">1970\'s</string>
    <string name="twos">2000\'s</string>
    <string name="nine90s">1990\'s</string>
    <string name="two20s">2020\'s</string>
    <string name="two10s">2010\'s</string>
    <string name="nine80s">1980\'s</string>
    <string name="question6V2">What determines if you like a song?</string>
    <string name="beat">The Beat</string>
    <string name="singer">The Singer\'s Voice</string>
    <string name="vibe">The Song\'s Vibe</string>
    <string name="lyrics">The Lyrics</string>
    <string name="guitar">The Guitar</string>
    <string name="dance">If You Can Dance</string>
    <string name="question7V2">When you want to hear new music, where you headed?</string>
    <string name="festivals">Festivals</string>
    <string name="raves">Raves</string>
    <string name="concerts">Concerts</string>
    <string name="coffee">Coffee Shops</string>
    <string name="radio">Radio</string>
    <string name="local">Local Record Store</string>
    <string name="question2V3">Pick a movie snack:</string>
    <string name="popcorn">Popcorn</string>
    <string name="gummy">Gummy Bears</string>
    <string name="chocolate">Chocolate</string>
    <string name="peanuts">Peanuts</string>
    <string name="cream">Ice Cream</string>
    <string name="none">None</string>
    <string name="question3V3">When are you going to watch a movie?</string>
    <string name="make">When Someone Makes Me</string>
    <string name="carpet">At Red Carpet Premier</string>
    <string name="netflix">When it\'s on Netflix</string>
    <string name="theaters">When it\'s in Theaters</string>
    <string name="redbox">When it\'s on Redbox</string>
    <string name="opening">On Opening Night</string>
    <string name="question4V3">Pick a famous movie franchise:</string>
    <string name="dune">Dune</string>
    <string name="hunger">Hunger Games</string>
    <string name="rings">Lord of the Rings</string>
    <string name="harry">Harry Potter</string>
    <string name="star">Star Wars</string>
    <string name="twilight">Twilight</string>
    <string name="question5V3">How committed to movies are you?</string>
    <string name="house">Owns House Decor</string>
    <string name="enjoy">Enjoys it</string>
    <string name="secret">Knows Everything</string>
    <string name="costume">Costume Premiers</string>
    <string name="learned">Doesn\'t Care</string>
    <string name="forget">Forgets Entire Plot</string>
    <string name="question6V3">Pick a comfort movie:</string>
    <string name="princess">Princess Diaries</string>
    <string name="sweet">Sweet Magnolias</string>
    <string name="avengers">Avengers</string>
    <string name="king">King Kong</string>
    <string name="top">Top Gun</string>
    <string name="coco">Coco</string>
    <string name="question7V3">Who is your favorite actress/actor</string>
    <string name="george">George Clooney</string>
    <string name="johnny">Johnny Depp</string>
    <string name="anne">Anne Hathaway</string>
    <string name="meryl">Meryl Streep</string>
    <string name="angelina">Angelina Jolie</string>
    <string name="ryan">Ryan Reynolds</string>
    <string name="question8V3">How do you feel about musicals?</string>
    <string name="hate">HATE</string>
    <string name="idk">Don\'t Care</string>
    <string name="love">LOVE</string>
    <string name="depends">Depends on the Musical</string>
    <string name="question9V3">How many movies do you watch in a week?</string>
    <string name="redResults">Your Personality is: Red!!!</string>
    <string name="redDesc">This means that you are an emotionally driven person. Who will on most
    occasions will make decisions with your heart instead of your head.</string>
    <string name="orangeResults">Your Personality is: Orange!!!</string>
    <string name="orangeDesc">This means that you are a person who is always driven by emotion but
    also tries to see the good of the situation. You bring joy to people through content easy-going
    personality.</string>
    <string name="yellowResults">Your Personality is: Yellow!!!</string>
    <string name="yellowDesc">This means that you an optimistic person who never fails to see the
    silver lining. You always bring sunshine and joy to the people around you.</string>
    <string name="greenResults">Your Personality is: Green!!!</string>
    <string name="greenDesc">This means that you are a person who values the little things in life.
    You may not always appear to be a ray of sunshine, but you always appreciate the beauty of life.</string>
    <string name="blueResults">Your Personality is: Blue!!!</string>
    <string name="blueDesc">This means that you are a rather mellow person. Who always just goes
    with the flow and is calm, cool, and collected.</string>
    <string name="purpleResults">Your Personality is: Purple!!!</string>
    <string name="purpleDesc">This means that you are a person who on the surface appears bright and
    bubbly, but in actuality you are just content. Living life as it goes and appreciates it as it is.</string>
    <string name="saintResults">The Music I\'d Play For You is: Saint Motel!!!</string>
    <string name="saintDesc">The specific song that I would play for you is Sweet Talk. This is
    because you appreciate indie music, and love music to just vibe.</string>
    <string name="dayResults">The Music I\'d Play For You is: A Day to Remember!!!</string>
    <string name="dayDesc">The specific song that I would play for you is 2nd Sucks. This is because you
    appreciate punk music and love music because of the iconic punk rock guitar and head banging drops.</string>
    <string name="aliciaResults">The Music I\'d Play For You is: Alicia Keys!!!</string>
    <string name="aliciaDesc">The specific song that I would play for you is Diary. This is because you
    appreciate mellow toe-tapping R and B music, with a beautiful voice singing the deeper meaning
    lyrics.</string>
    <string name="illiniumResults">The Music I\'d Play For You is: Illinium!!!</string>
    <string name="illiniumDesc">The specific song that I would play for you is Fragments. This is because
    you appreciate music for reasons deeper than lyrics, it\'s all about the instruments and the crazy
    beat and drops.</string>
    <string name="issacResults">The Music I\'d Play For You is: Issac Dunbar!!!</string>
    <string name="issacDesc">The specific song that I would play for you is Scorton\'s Creek. This is
    because you like listening to different types of music that just makes you feel something.</string>
    <string name="fridayResults">The Music I\'d Play For You is: Friday Pilots Club!!!</string>
    <string name="fridayDesc">The specific song that I would play for you is The End of It. This is
    because you appreciate pop music that is absolutely danceable. Music brings you joy and you just
    want to dance and bop.</string>
    <string name="feetResults">The Movie I\'d Play For You is: 5 Feet Apart!!!</string>
    <string name="feetDesc">This means that you are a hopeless romantic. Who is secretly loves movies
    that pull at your heart strings and nothing captures this better than 5 Feet Apart/.</string>
    <string name="darkResults">The Movie I\'d Play For You is: Batman The Dark Knight Rises!!!</string>
    <string name="darkDesc">This means that you are a person who watches a movies for action scenes
    and cannot wait to see the knew movie. Nothing captures your attention more than action movies like
    Batman The Dark Knight Rises.</string>
    <string name="skyResults">The Movie I\'d Play For You is: Sky High!!!</string>
    <string name="skyDesc">This means that you are the type of person who just watches movies for a
    good story. Nothing captures your desire for a wonderful story like Sky High.</string>
    <string name="aliensResults">The Movie I\'d Play For You is: Aliens in the Attic!!!</string>
    <string name="aliensDesc">This means you are the type of person who watches movies for things that are not
    of this world. Nothing captures your need for unwordly stories like Aliens in the Attic.</string>
    <string name="frogResults">The Movie I\'d Play For You is: Princess and the Frog!!!</string>
</resources>