<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    android:paddingBottom="50dp"
    tools:context=".MusicQuiz">

    <WebView
        android:id="@+id/titleWeb"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fadeScrollbars="false"
        android:scrollbarSize="10dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/question1View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/question1"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <TableLayout
                android:id="@+id/q1Table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:layout_weight=".2">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/q1opt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/button"
                        android:text="@string/punk"
                        android:textColor="@color/black"
                        android:onClick="select1"
                        android:textSize="20sp"
                        style="?android:attr/buttonBarButtonStyle"/>

                    <Button
                        android:id="@+id/q1opt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/button"
                        android:text="@string/country"
                        android:textColor="@color/black"
                        android:onClick="select1"
                        android:textSize="20sp"
                        style="?android:attr/buttonBarButtonStyle" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/q1opt3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/button"
                        android:text="@string/pop"
                        android:textColor="@color/black"
                        android:onClick="select1"
                        android:textSize="20sp"
                        style="?android:attr/buttonBarButtonStyle"/>

                    <Button
                        android:id="@+id/q1opt4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/button"
                        android:text="@string/rb"
                        android:textColor="@color/black"
                        android:onClick="select1"
                        android:textSize="20sp"
                        style="?android:attr/buttonBarButtonStyle"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/q1opt5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/button"
                        android:text="@string/hip"
                        android:textColor="@color/black"
                        android:onClick="select1"
                        android:textSize="20sp"
                        style="?android:attr/buttonBarButtonStyle"/>

                    <Button
                        android:id="@+id/q1opt6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/button"
                        android:text="@string/edm"
                        android:textColor="@color/black"
                        android:onClick="select1"
                        android:textSize="20sp"
                        style="?android:attr/buttonBarButtonStyle"/>
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:backgroundTint="@color/button"
                android:text="@string/analyze"
                android:textColor="@color/black"
                android:onClick="analyze"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>